<resources>
    <string name="app_name">CS125BMI</string>
    <string name="message">BMI Diet</string>
    <string name="action_settings">Settings</string>
    <string name="Continue">Continue</string>
    <string name="Banana">Banana</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="InstructionForChoose">Choose The Foods That "You'd" Like</string>
    <string name="FinalIntroduction">Based on your BMI and food preferences we recommend the following diet: </string>
    <string name="MoreInfo">For more information click the following link: </string>
    <string name="FirstPageBmi"> Click on continue to calculate you BMI</string>
    <string name="YourBmi">Your BMI is </string>
    <string name="ContinueForDiet">"Click continue to create a diet."</string>
    <string name="break1">Chocolate Banana Nut Shake</string>
    <string name="break2">Vanilla Berry Shake</string>
    <string name="break3">Chocolate Hazelnut Shake</string>
    <string name="break4">Caramel Apple Shake</string>
    <string name="break5"> Vanilla blueberry shake</string>
    <string name="break6"> Super green shake</string>
    <string-array name="dietList">
        <item>Gluten Free</item>
        <item>Ketogenic</item>
        <item>Vegetarian</item>
        <item>Lacto-Vegentarian</item>
        <item>Ovo-Vegetarian</item>
        <item>Vegan</item>
        <item>Pescetarian</item>
        <item>Paleo</item>
        <item>Primal</item>
    </string-array>
    <string name="allergy">Enter Allergies (Separate with space)</string>
</resources>

